--- a/views/bltp/detail/materi/index.html
+++ b/views/bltp/detail/materi/index.html
@@ -19,8 +19,8 @@
 <body>
     <div id="close-content">
         <h1>Oops.......</h1>
-        <h1>Saat ini Hanya bisa digunakan di</h1>
-        <h1>-Layar Besar-</h1>
+        <h1>Developer tidak berencana mengembangkan mobile design</h1>
+        <h1>-Only-</h1>
         <h1>( <i class="fa-solid fa-desktop"></i>, <i class="fa-solid fa-computer"></i>, <i
                 class="fa-solid fa-laptop"></i>, <i class="fa-solid fa-display"></i>, <i class="fa-solid fa-tv"></i> )
         </h1>
@@ -56,7 +56,7 @@
             </aside>
             <main>
                 <div class="title">
-                    <h1>PENJELASAN</h1>
+                    <h1>MATERI</h1>
                 </div>
                 <div class="content">
                     <h1>Konten Materi BLPT</h1>
