--- a/views/wisata/detail/prambanan/index.html
+++ b/views/wisata/detail/prambanan/index.html
@@ -19,8 +19,8 @@
 <body>
     <div id="close-content">
         <h1>Oops.......</h1>
-        <h1>Saat ini Hanya bisa digunakan di</h1>
-        <h1>-Layar Besar-</h1>
+        <h1>Developer tidak berencana mengembangkan mobile design</h1>
+        <h1>-Only-</h1>
         <h1>( <i class="fa-solid fa-desktop"></i>, <i class="fa-solid fa-computer"></i>, <i class="fa-solid fa-laptop"></i>, <i class="fa-solid fa-display"></i>, <i class="fa-solid fa-tv"></i> )</h1>
     </div>
     <section id="wisata_detail_prambanan">
@@ -53,7 +53,7 @@
             </aside>
             <main>
                 <div class="title">
-                    <h1>PENJELASAN</h1>
+                    <h1>TENTANG WISATA</h1>
                 </div>
                 <div class="content">
                     <div class="content_title">
