--- a/views/amikom/detail/materi/index.html
+++ b/views/amikom/detail/materi/index.html
@@ -28,7 +28,7 @@
     <section id="amikom_detail_material">
         <header>
             <div class="logo">
-                <img src="../../../../public/image/logo/logo-amikom.jpg" alt="">
+                <img src="../../../../public/image/logo/logo-amikom.jpg" alt="logo-amikom">
             </div>
             <div class="title">
                 <h1>AMIKOM</h1>
@@ -50,7 +50,7 @@
                     <li><a href="../../../../amikom.html">PENJELASAN</a></li>
                     <li><a href="../materi/index.html">MATERI</a></li>
                     <li><a href="../struktur/index.html">STRUKTUR</a></li>
-                    <li><a href="../dokumentasi/">DOKUMENTASI</a></li>
+                    <li><a href="../dokumentasi/index.html">DOKUMENTASI</a></li>
                 </ul>
             </aside>
             <main>
@@ -58,7 +58,58 @@
                     <h1>MATERI</h1>
                 </div>
                 <div class="content">
-                    <h1>Konten Materi Amikom</h1>
+                    <p>
+                        Ketika kami berada di AMIKOM, kami dan juga para dosen kami dihadapkan pada serangkaian acara
+                        yang bertujuan untuk memberikan gambaran komprehensif tentang kegiatan yang dilakukan oleh
+                        Mahasiswa AMIKOM. Acara tersebut dirancang dengan teliti untuk memberikan wawasan yang mendalam
+                        kepada kami tentang dinamika kehidupan kampus dan lingkungan belajar di AMIKOM.
+                    </p>
+                    <p>
+                        Acara dimulai dengan sebuah pembukaan yang diselenggarakan dengan megah di dalam ruang bioskop.
+                        Saat pembukaan tersebut, AMIKOM menayangkan trailer film AJISAKA yang menggugah semangat dan
+                        juga menampilkan sejarah panjang AMIKOM yang dipresentasikan dalam bentuk video yang inspiratif.
+                        Tidak hanya itu, kami juga diberikan penghormatan dengan sambutan hangat dari Kaprodi dan dosen
+                        yang mengampu mata kuliah Teknik Informatika, serta sambutan penuh semangat dari Dekan dan
+                        dosen-dosen terkemuka dari Universitas Islam Balitar.
+                    </p>
+                    <p>
+                        Setelah itu, kami dibimbing melalui materi yang disampaikan oleh dosen-dosen AMIKOM yang ahli di
+                        bidangnya, yang membahas tentang kurikulum yang berlaku, program-program yang sedang
+                        berlangsung, dan juga tentang proses penyusunan skripsi yang menjadi langkah akhir perjalanan
+                        pendidikan mahasiswa. AMIKOM dengan bangga menawarkan dua jurusan dengan ketentuan yang telah
+                        diatur secara cermat, memberikan kesempatan kepada mahasiswa untuk memilih sesuai minat dan
+                        bakatnya.
+                    </p>
+                    <p>
+                        Ketika materi telah selesai disampaikan, suasana ruangan menjadi hidup dengan adanya sesi tanya
+                        jawab yang menarik. Mahasiswa dari Universitas Islam Balitar diberikan kesempatan untuk bertanya
+                        secara langsung dan memperdalam pemahaman mereka terhadap topik-topik yang telah dibahas
+                        sebelumnya.
+                    </p>
+                    <p>
+                        Setelah itu, kami dipandu menuju tempat UMKM bazar yang diadakan oleh mahasiswa AMIKOM. Di sana,
+                        kami disuguhkan dengan beragam produk, jasa, dan properti yang dihasilkan oleh mahasiswa AMIKOM.
+                        Tidak hanya sekadar memperkenalkan produk, para mahasiswa juga diberikan kesempatan untuk
+                        berkonsultasi langsung dengan pengurus UMKM tentang cara memajukan usaha mereka.
+                    </p>
+                    <p>
+                        Acara berlanjut dengan kunjungan ke tempat pengeditan film 2D dan 3D, di mana kami diberikan
+                        pemahaman yang mendalam tentang teknologi-teknologi terkini dalam pembuatan film. Para
+                        pembimbing memberikan penjelasan yang detail dan juga memberikan kesempatan bagi kami untuk
+                        bertanya secara langsung, memperkaya pemahaman kami tentang dunia sinematografi.
+                    </p>
+                    <p>
+                        Terakhir, kami diajak untuk melihat fasilitas media MQFM dan RBTV yang menjadi kebanggaan
+                        AMIKOM. Di sana, kami diberikan pemahaman yang mendalam tentang peran media dalam dunia
+                        informasi dan hiburan. Penjelasan yang disampaikan secara rinci dan ilustratif membuat kami
+                        semakin memahami betapa pentingnya peran media dalam membentuk opini dan persepsi masyarakat.
+                    </p>
+                    <p>
+                        Saat semua kegiatan telah selesai, kami merasa puas dengan pengalaman yang kami dapatkan dan
+                        kami mengucapkan terima kasih atas kesempatan yang diberikan kepada kami untuk mengeksplorasi
+                        dunia pendidikan dan industri di AMIKOM.
+
+                    </p>
                 </div>
             </main>
         </section>
