--- a/views/amikom/detail/struktur/index.html
+++ b/views/amikom/detail/struktur/index.html
@@ -28,7 +28,7 @@
     <section id="amikom_detail_structure">
         <header>
             <div class="logo">
-                <img src="../../../../public/image/logo/logo-amikom.jpg" alt="">
+                <img src="../../../../public/image/logo/logo-amikom.jpg" alt="logo-amikom">
             </div>
             <div class="title">
                 <h1>AMIKOM</h1>
@@ -50,7 +50,7 @@
                     <li><a href="../../../../amikom.html">PENJELASAN</a></li>
                     <li><a href="../materi/index.html">MATERI</a></li>
                     <li><a href="../struktur/index.html">STRUKTUR</a></li>
-                    <li><a href="../dokumentasi/">DOKUMENTASI</a></li>
+                    <li><a href="../dokumentasi/index.html">DOKUMENTASI</a></li>
                 </ul>
             </aside>
             <main>
