--- a/views/bltp/detail/materi/index.html
+++ b/views/bltp/detail/materi/index.html
@@ -28,7 +28,7 @@
     <section id="blpt_detail_material">
         <header>
             <div class="logo">
-                <img src="../../../../public/image/logo/logo-blpt.png" alt="">
+                <img src="../../../../public/image/logo/logo-blpt.png" alt="logo-blpt">
             </div>
             <div class="title">
                 <h1>BLPT</h1>
@@ -51,7 +51,7 @@
                     <li><a href="../materi/index.html">MATERI</a></li>
                     <li><a href="../struktur/index.html">STRUKTUR</a></li>
                     <li><a href="../projek/index.html">PROJEK</a></li>
-                    <li><a href="../dokumentasi/">DOKUMENTASI</a></li>
+                    <li><a href="../dokumentasi/index.html">DOKUMENTASI</a></li>
                 </ul>
             </aside>
             <main>
@@ -59,7 +59,37 @@
                     <h1>MATERI</h1>
                 </div>
                 <div class="content">
-                    <h1>Konten Materi BLPT</h1>
+                    <p>
+                        Para mahasiswa tiba di ruangan B10 Balai Latihan Pendidikan Teknik Yogyakarta dengan penuh
+                        antusiasme, siap untuk memulai sesi yang akan dilaksanakan. Mereka disambut oleh Bapak Langgeng
+                        Arie Wira Yudha, S.T, MM.Pd, seorang instruktur yang dipercayakan untuk memberikan arahan dan
+                        bimbingan selama kegiatan. Instruktur ini telah memiliki pengalaman luas dalam bidang teknik dan
+                        pendidikan, memberikan keyakinan kepada mahasiswa bahwa mereka akan mendapatkan pemahaman yang
+                        mendalam tentang materi yang akan dipelajari.
+                    </p>
+                    <p>
+                        Dalam sesi tersebut, para mahasiswa diperkenalkan dengan berbagai program yang ditawarkan oleh
+                        Balai Latihan Pendidikan Teknik Yogyakarta, termasuk diklat dan PKL (Praktik Kerja Lapangan).
+                        Mereka diberikan pemahaman yang komprehensif tentang pentingnya program-program tersebut dalam
+                        mempersiapkan mahasiswa untuk dunia kerja yang sesungguhnya. Instruktur juga menggarisbawahi
+                        betapa pentingnya pengalaman lapangan dalam memperkaya pengetahuan dan keterampilan mahasiswa.
+                    </p>
+                    <p>
+                        Selain itu, instruktur juga memberikan pencerahan kepada para mahasiswa mengenai proses
+                        pembuatan skripsi. Mereka diberitahu bahwa pencarian jurnal merupakan salah satu langkah krusial
+                        dalam menyusun skripsi yang berkualitas. Instruktur memberikan tips dan saran tentang cara
+                        efektif untuk mencari dan memanfaatkan jurnal-jurnal yang relevan dengan topik penelitian
+                        masing-masing. Semua informasi yang diberikan diharapkan dapat membantu mahasiswa mempersiapkan
+                        diri dengan baik untuk menyelesaikan studi mereka dengan sukses.
+                    </p>
+                    <p>
+                        Secara keseluruhan, pertemuan ini memberikan pengalaman yang berharga bagi para mahasiswa.
+                        Mereka tidak hanya mendapatkan wawasan tentang program-program yang ditawarkan oleh Balai
+                        Latihan Pendidikan Teknik Yogyakarta, tetapi juga mendapatkan pemahaman yang lebih mendalam
+                        tentang pentingnya pengalaman lapangan dan proses penulisan skripsi. Dengan bimbingan dari
+                        instruktur yang berpengalaman, para mahasiswa diharapkan dapat mengoptimalkan potensi mereka dan
+                        berhasil meraih kesuksesan dalam pendidikan dan karier masa depan mereka.
+                    </p>
                 </div>
             </main>
         </section>
