--- a/views/wisata/detail/malioboro/index.html
+++ b/views/wisata/detail/malioboro/index.html
@@ -21,12 +21,14 @@
         <h1>Oops.......</h1>
         <h1>Developer tidak berencana mengembangkan mobile design</h1>
         <h1>-Only-</h1>
-        <h1>( <i class="fa-solid fa-desktop"></i>, <i class="fa-solid fa-computer"></i>, <i class="fa-solid fa-laptop"></i>, <i class="fa-solid fa-display"></i>, <i class="fa-solid fa-tv"></i> )</h1>
+        <h1>( <i class="fa-solid fa-desktop"></i>, <i class="fa-solid fa-computer"></i>, <i
+                class="fa-solid fa-laptop"></i>, <i class="fa-solid fa-display"></i>, <i class="fa-solid fa-tv"></i> )
+        </h1>
     </div>
     <section id="wisata_detail_malioboro">
         <header>
             <div class="logo">
-                <img src="../../../../public/image/logo/logo-wisata.png" alt="">
+                <img src="../../../../public/image/logo/logo-wisata.png" alt="logo-wisata">
             </div>
             <div class="title">
                 <h1>WISATA</h1>
@@ -60,39 +62,42 @@
                         <h1>MALIOBORO</h1>
                     </div>
                     <div class="content_image">
-                        <img src="./public/image/wisata/main-image.jpg" alt="heha">
+                        <img src="../../../../public/image/wisata/malioboro.webp" alt="malioboro">
                         <div class="content_image_description">
-                            <p>Yogyakarta selalu punya cerita dan romansa di setiap sudut kotanya. Sebab ada begitu
-                                banyak destinasi wisata yang bisa kamu kunjungi, mulai dari alam, museum, seni, kafe,
-                                hingga kuliner, semuanya tersaji untuk memuaskan dahaga traveler yang ingin berwisata ke
-                                Kota Gudeg. Salah satunya adalah destinasi wisata baru yang ada di Desa Patuk,
-                                Gunungkidul, Daerah Istimewa Yogyakarta. Adalah Heha Skyiew yang punya pemandangan yang
-                                luar biasa. Karena di Heha Sky View, kamu bisa menikmati sisi lain indahnya pemandangan
-                                Kota Yogyakarta. Tak hanya itu saja, kamu pun juga disuguhkan dengan pemandangan
-                                gagahnya Gunung Merapi serta eloknya matahari di kala senja. Dibangun pada 2018 silam,
-                                tempat ini sebenarnya adalah sebuah restoran yang terdiri dari tiga lantai yang
-                                memadukan konsep tempat makan dengan spot foto berlatar pemandangan alam dan kawasan
-                                kota Jogja dari ketinggian.</p>
+                            <p>
+                                Jalan Malioboro (Jawa: ꦢꦭꦤ꧀​ꦩꦭꦶꦪꦧꦫ, translit: Dalan Maliabara) adalah salah satu kawasan
+                                jalan dari tiga jalan di Kota Yogyakarta yang membentang dari Tugu Yogyakarta hingga ke
+                                persimpangan Titik Nol Kilometer Yogyakarta. Secara keseluruhan, kawasan Malioboro
+                                terdiri atas Jalan Margo Utomo, Jalan Malioboro, dan Jalan Margo Mulyo. Jalan ini
+                                menghubungkan Tugu Yogyakarta hingga menjelang kompleks Keraton Yogyakarta. Di sisi
+                                utara adalah Jalan Margo Utomo, yang terbentang dari selatan kawasan Tugu hingga sisi
+                                timur Stasiun Yogyakarta. Antara Jalan Margo Utomo dan Jalan Malioboro dipisahkan dengan
+                                perlintasan kereta api yang cukup unik, di mana perlintasan ini menggunakan palang pintu
+                                berjenis geser. Pada masa lalu, perlintasan ini dapat dilintasi oleh kendaraan umum
+                                sebagai penghubung Jalan Margo Utomo menuju Malioboro. Namun karena meningkatnya volume
+                                kendaraan yang melintas, membuat perlintasan ini hanya boleh dilintasi oleh
+                                kendaraan-kendaraan kecil seperti becak atau sepeda, sedangkan kendaraan lain harus
+                                memutar terlebih dahulu ke arah timur melewati Jembatan Kewek, kemudian berbelok ke arah
+                                barat melalui Jalan Abu Bakar Ali, barulah sampai di Jalan Malioboro.
+                            </p>
                         </div>
                     </div>
                     <p>
-
-                        Nama Heha sendiri diambil dari nama depan selaku pemilik resto dan juga partner bisnisnya.
-                        Tempat wisata yang baru saja dibuka beberapa waktu lalu ini langsung menyedot perhatian
-                        wisatawan.Pengunjung atau wisatawan yang datang tak hanya dapat menikmati makanan dan minuman
-                        yang ditawarkan di restoran tersebut, namun mereka juga ditawarkan banyak sekali spot swafoto
-                        dan salah satu spot foto yang diburu pengunjung adalah Sky Glass yaitu teras kaca yang
-                        Instagramable.Selain spot foto yang Instagramable, di sini juga tersedia sebuah taman yang cocok
-                        buat bersantai. Jika kamu termasuk si penikmat senja, tempat ini juga cocok untuk dijadikan
-                        sebagai lokasi berburu sunset. Sebab, kamu bisa melihat indahnya pesona matahari yang perlahan
-                        tenggelam dengan begitu jelas.
-                        Sementara itu, di waktu malam, kamu bisa menikmati gemerlapnya lampu Kota Yogyakarta diselimuti
-                        dinginnya semilir angin.Bagi kamu yang ingin berkunjung ke Heha Skyview pada pukul 10.00 WIB -
-                        16.30 WIB akan dikenakan biaya sekitar Rp 10 ribu. Sedangkan, pada pukul 16.30 WIB ke atas,
-                        pengunjung akan dikenakan biaya Rp 15 ribu. Lain lagi jika kamu ingin berfoto di spot teras
-                        kaca, akan dikenakan tarif foto Rp 30 ribu. Untuk jasa fotonya Rp 5 ribu. Heha Skyview dibuka
-                        mulai pukul 10.00 WIB - 22.00 WIB sedangkan pada hari Jumat - Minggu dibuka hingga pukul 23.00
-                        WIB.</p>
+                        Jalan Malioboro sebenarnya hanya terbentang dari sisi selatan rel kereta api, di depan Hotel
+                        Grand Inna hingga berakhir di Pasar Beringharjo sisi timur. Dari titik ini, nama jalan berubah
+                        menjadi Jalan Margo Mulyo hingga Titik Nol Kilometer Yogyakarta. Jalan Malioboro menjadi batas
+                        antara Kemantren Gedongtengen dan Kemantren Danurejan, di mana sisi barat Malioboro adalah
+                        wilayah dari kemantren Gedongtengen, dan sisi timur Malioboro adalah wilayah dari kemantren
+                        Danurejan. Sedangkan seluruh sisi jalan Margo Utomo adalah wilayah dari Kemantren Jetis, dan
+                        sisi jalan Margo Mulyo adalah wilayah dari Kemantren Gondomanan. Terdapat beberapa objek
+                        bersejarah di kawasan ini, antara lain Tugu Yogyakarta, Stasiun Yogyakarta, Gedung Agung, Pasar
+                        Beringharjo, Kantor DPRD DIY, Benteng Vredeburg, Hotel Grand Inna, Komplek Kantor Gubernur
+                        Daerah Istimewa Yogyakarta, dan Monumen Serangan Umum 1 Maret. Jalan Malioboro terkenal dengan
+                        para pedagang kaki lima yang menjajakan kerajinan khas Jogja dan warung-warung lesehan di malam
+                        hari yang menjual kuliner Jogja seperti gudeg. Jalan ini juga terkenal sebagai tempat
+                        berkumpulnya para seniman yang sering mengekspresikan kemampuan mereka seperti bermain musik,
+                        melukis, happening art, pantomim, dan lain-lain.
+                    </p>
                 </div>
             </main>
         </section>
