--- a/views/wisata/detail/pinus-pengger/index.html
+++ b/views/wisata/detail/pinus-pengger/index.html
@@ -21,12 +21,14 @@
         <h1>Oops.......</h1>
         <h1>Developer tidak berencana mengembangkan mobile design</h1>
         <h1>-Only-</h1>
-        <h1>( <i class="fa-solid fa-desktop"></i>, <i class="fa-solid fa-computer"></i>, <i class="fa-solid fa-laptop"></i>, <i class="fa-solid fa-display"></i>, <i class="fa-solid fa-tv"></i> )</h1>
+        <h1>( <i class="fa-solid fa-desktop"></i>, <i class="fa-solid fa-computer"></i>, <i
+                class="fa-solid fa-laptop"></i>, <i class="fa-solid fa-display"></i>, <i class="fa-solid fa-tv"></i> )
+        </h1>
     </div>
     <section id="wisata_detail_pinus_pengger">
         <header>
             <div class="logo">
-                <img src="../../../../public/image/logo/logo-wisata.png" alt="">
+                <img src="../../../../public/image/logo/logo-wisata.png" alt="logo-wisata">
             </div>
             <div class="title">
                 <h1>WISATA</h1>
@@ -60,39 +62,31 @@
                         <h1>PINUS PENGGER</h1>
                     </div>
                     <div class="content_image">
-                        <img src="./public/image/wisata/main-image.jpg" alt="heha">
+                        <img src="../../../../public/image/wisata/pinus-pengger.jpg" alt="pinus-pengger">
                         <div class="content_image_description">
-                            <p>Yogyakarta selalu punya cerita dan romansa di setiap sudut kotanya. Sebab ada begitu
-                                banyak destinasi wisata yang bisa kamu kunjungi, mulai dari alam, museum, seni, kafe,
-                                hingga kuliner, semuanya tersaji untuk memuaskan dahaga traveler yang ingin berwisata ke
-                                Kota Gudeg. Salah satunya adalah destinasi wisata baru yang ada di Desa Patuk,
-                                Gunungkidul, Daerah Istimewa Yogyakarta. Adalah Heha Skyiew yang punya pemandangan yang
-                                luar biasa. Karena di Heha Sky View, kamu bisa menikmati sisi lain indahnya pemandangan
-                                Kota Yogyakarta. Tak hanya itu saja, kamu pun juga disuguhkan dengan pemandangan
-                                gagahnya Gunung Merapi serta eloknya matahari di kala senja. Dibangun pada 2018 silam,
-                                tempat ini sebenarnya adalah sebuah restoran yang terdiri dari tiga lantai yang
-                                memadukan konsep tempat makan dengan spot foto berlatar pemandangan alam dan kawasan
-                                kota Jogja dari ketinggian.</p>
+                            <p>
+                                Hutan Pinus Pengger (Jawa: ꦄꦭꦱ꧀​ꦥꦶꦤꦸꦱ꧀​ꦥꦼꦁ​ꦒꦼꦂ, translit: Alas Pinus Pěnggěr) merupakan
+                                salah satu objek wisata andalan Kabupaten Bantul. Wisata alam ini berlokasi di
+                                Sendangsari, Desa Terong, Kec. Dlingo, Kabupaten Bantul, Daerah Istimewa Yogyakarta.
+                                Hutan Pinus Pengger mudah dijangkau karena terletak dipinggir jalan Patuk-Dlingo km 4,5.
+                                Walaupun masih terdengar asing, dikalangan penyuka jalan-jalan objek wisata, Hutan Pinus
+                                Pengger terbilang cukup populer. Tempat ini masih dirasa asing karena baru dibuka secara
+                                resmi pada tanggal 7 April 2016. Hutan Pinus ini sangat digemari oleh para pencipta
+                                objek wisata, karena objek wisata ini menyuguhkan pemandangan alam yang sangat indah.
+                            </p>
                         </div>
                     </div>
                     <p>
-
-                        Nama Heha sendiri diambil dari nama depan selaku pemilik resto dan juga partner bisnisnya.
-                        Tempat wisata yang baru saja dibuka beberapa waktu lalu ini langsung menyedot perhatian
-                        wisatawan.Pengunjung atau wisatawan yang datang tak hanya dapat menikmati makanan dan minuman
-                        yang ditawarkan di restoran tersebut, namun mereka juga ditawarkan banyak sekali spot swafoto
-                        dan salah satu spot foto yang diburu pengunjung adalah Sky Glass yaitu teras kaca yang
-                        Instagramable.Selain spot foto yang Instagramable, di sini juga tersedia sebuah taman yang cocok
-                        buat bersantai. Jika kamu termasuk si penikmat senja, tempat ini juga cocok untuk dijadikan
-                        sebagai lokasi berburu sunset. Sebab, kamu bisa melihat indahnya pesona matahari yang perlahan
-                        tenggelam dengan begitu jelas.
-                        Sementara itu, di waktu malam, kamu bisa menikmati gemerlapnya lampu Kota Yogyakarta diselimuti
-                        dinginnya semilir angin.Bagi kamu yang ingin berkunjung ke Heha Skyview pada pukul 10.00 WIB -
-                        16.30 WIB akan dikenakan biaya sekitar Rp 10 ribu. Sedangkan, pada pukul 16.30 WIB ke atas,
-                        pengunjung akan dikenakan biaya Rp 15 ribu. Lain lagi jika kamu ingin berfoto di spot teras
-                        kaca, akan dikenakan tarif foto Rp 30 ribu. Untuk jasa fotonya Rp 5 ribu. Heha Skyview dibuka
-                        mulai pukul 10.00 WIB - 22.00 WIB sedangkan pada hari Jumat - Minggu dibuka hingga pukul 23.00
-                        WIB.</p>
+                        Saat mengunjungi Hutan Pinus Pengger, Anda bisa melakukan beberapa aktivitas alam yang
+                        menyenangkan. Salah satunya adalah melihat keindahan alam Jogja dari ketinggian. Jika Anda ingin
+                        melihat pemandangan Jogja pada malam hari dan pagi hari, Anda bisa camping disini dengan harga
+                        tiket masuk yang murah. Dengan keasrian hutan dan hawa dingin yang semilir menjadikan suasana
+                        camping mu menjadi lebih menyenangkan.
+                        Selain itu, Anda juga bisa memilih beberapa spot selfie yang sudah disediakan. Diantaranya ada
+                        spot foto sarang burung, rumah pohon, tangga cinta, dan jembatan pohon. Ada satu spot foto yang
+                        paling diminati pengunjung terutama pada malam hari yaitu spot sarang burung raksasa yang
+                        apabila difoto pada malam hari akan terlihat kerlap kerlip pemandangan lampu kota Jogja.
+                    </p>
                 </div>
             </main>
         </section>
