--- a/views/wisata/detail/prambanan/index.html
+++ b/views/wisata/detail/prambanan/index.html
@@ -21,12 +21,14 @@
         <h1>Oops.......</h1>
         <h1>Developer tidak berencana mengembangkan mobile design</h1>
         <h1>-Only-</h1>
-        <h1>( <i class="fa-solid fa-desktop"></i>, <i class="fa-solid fa-computer"></i>, <i class="fa-solid fa-laptop"></i>, <i class="fa-solid fa-display"></i>, <i class="fa-solid fa-tv"></i> )</h1>
+        <h1>( <i class="fa-solid fa-desktop"></i>, <i class="fa-solid fa-computer"></i>, <i
+                class="fa-solid fa-laptop"></i>, <i class="fa-solid fa-display"></i>, <i class="fa-solid fa-tv"></i> )
+        </h1>
     </div>
     <section id="wisata_detail_prambanan">
         <header>
             <div class="logo">
-                <img src="../../../../public/image/logo/logo-wisata.png" alt="">
+                <img src="../../../../public/image/logo/logo-wisata.png" alt="logo-wisata">
             </div>
             <div class="title">
                 <h1>WISATA</h1>
@@ -60,39 +62,36 @@
                         <h1>PRAMBANAN</h1>
                     </div>
                     <div class="content_image">
-                        <img src="./public/image/wisata/main-image.jpg" alt="heha">
+                        <img src="../../../../public/image/wisata/candi-prambanan.jpg" alt="prambanan">
                         <div class="content_image_description">
-                            <p>Yogyakarta selalu punya cerita dan romansa di setiap sudut kotanya. Sebab ada begitu
-                                banyak destinasi wisata yang bisa kamu kunjungi, mulai dari alam, museum, seni, kafe,
-                                hingga kuliner, semuanya tersaji untuk memuaskan dahaga traveler yang ingin berwisata ke
-                                Kota Gudeg. Salah satunya adalah destinasi wisata baru yang ada di Desa Patuk,
-                                Gunungkidul, Daerah Istimewa Yogyakarta. Adalah Heha Skyiew yang punya pemandangan yang
-                                luar biasa. Karena di Heha Sky View, kamu bisa menikmati sisi lain indahnya pemandangan
-                                Kota Yogyakarta. Tak hanya itu saja, kamu pun juga disuguhkan dengan pemandangan
-                                gagahnya Gunung Merapi serta eloknya matahari di kala senja. Dibangun pada 2018 silam,
-                                tempat ini sebenarnya adalah sebuah restoran yang terdiri dari tiga lantai yang
-                                memadukan konsep tempat makan dengan spot foto berlatar pemandangan alam dan kawasan
-                                kota Jogja dari ketinggian.</p>
+                            <p>Candi Prambanan (Jawa: ꦕꦟ꧀ꦝꦶ​ꦥꦿꦩ꧀ꦧꦤꦤ꧀, translit: Caṇḍi Prambanan) adalah bangunan candi
+                                bercorak agama Hindu terbesar di Indonesia yang dibangun pada abad ke-9 Masehi. Candi
+                                yang juga disebut sebagai Rara Jonggrang ini dipersembahkan untuk Trimurti, tiga dewa
+                                utama Hindu yaitu dewa Brahma sebagai dewa pencipta, dewa Wisnu sebagai dewa pemelihara,
+                                dan dewa Siwa sebagai dewa pemusnah. Berdasarkan prasasti Siwagrha nama asli kompleks
+                                candi ini adalah Siwagrha (bahasa Sanskerta yang bermakna 'Rumah Siwa'), dan memang di
+                                garbagriha (ruang utama) candi ini bersemayam arca Siwa Mahadewa setinggi tiga meter,
+                                dikarenakan aliran Syaiwa yang mengutamakan pemujaan dewa Siwa di candi ini.
+                            </p>
                         </div>
                     </div>
                     <p>
-
-                        Nama Heha sendiri diambil dari nama depan selaku pemilik resto dan juga partner bisnisnya.
-                        Tempat wisata yang baru saja dibuka beberapa waktu lalu ini langsung menyedot perhatian
-                        wisatawan.Pengunjung atau wisatawan yang datang tak hanya dapat menikmati makanan dan minuman
-                        yang ditawarkan di restoran tersebut, namun mereka juga ditawarkan banyak sekali spot swafoto
-                        dan salah satu spot foto yang diburu pengunjung adalah Sky Glass yaitu teras kaca yang
-                        Instagramable.Selain spot foto yang Instagramable, di sini juga tersedia sebuah taman yang cocok
-                        buat bersantai. Jika kamu termasuk si penikmat senja, tempat ini juga cocok untuk dijadikan
-                        sebagai lokasi berburu sunset. Sebab, kamu bisa melihat indahnya pesona matahari yang perlahan
-                        tenggelam dengan begitu jelas.
-                        Sementara itu, di waktu malam, kamu bisa menikmati gemerlapnya lampu Kota Yogyakarta diselimuti
-                        dinginnya semilir angin.Bagi kamu yang ingin berkunjung ke Heha Skyview pada pukul 10.00 WIB -
-                        16.30 WIB akan dikenakan biaya sekitar Rp 10 ribu. Sedangkan, pada pukul 16.30 WIB ke atas,
-                        pengunjung akan dikenakan biaya Rp 15 ribu. Lain lagi jika kamu ingin berfoto di spot teras
-                        kaca, akan dikenakan tarif foto Rp 30 ribu. Untuk jasa fotonya Rp 5 ribu. Heha Skyview dibuka
-                        mulai pukul 10.00 WIB - 22.00 WIB sedangkan pada hari Jumat - Minggu dibuka hingga pukul 23.00
-                        WIB.</p>
+                        Kompleks percandian Prambanan secara keseluruhan terletak di Daerah Istimewa Yogyakarta, tetapi
+                        pintu administrasinya terletak di Jawa Tengah. Hal ini yang membuat Candi Prambanan terletak di
+                        2 tempat yakni di Desa Bokoharjo, Prambanan, Kabupaten Sleman, Daerah Istimewa Yogyakarta, dan
+                        di Tlogo, Prambanan, Kabupaten Klaten, Jawa Tengah, atau kurang lebih 17 kilometer timur laut
+                        dari Kota Yogya, 50 kilometer barat daya dari Kota Surakarta dan 120 kilometer selatan dari Kota
+                        Semarang, persis di perbatasan antara Daerah Istimewa Yogyakarta dan Jawa Tengah.
+                        Candi ini adalah termasuk Situs Warisan Dunia UNESCO, candi Hindu terbesar di Indonesia,
+                        sekaligus salah satu candi terindah di Asia Tenggara. Arsitektur bangunan ini berbentuk tinggi
+                        dan ramping sesuai dengan arsitektur Hindu pada umumnya dengan candi Siwa sebagai candi utama
+                        memiliki ketinggian mencapai 47 meter menjulang di tengah kompleks gugusan candi-candi yang
+                        lebih kecil. Sebagai salah satu candi termegah di Asia Tenggara, candi Prambanan menjadi daya
+                        tarik kunjungan wisatawan dari seluruh dunia.
+                        Menurut prasasti Siwagrha, candi ini mulai dibangun pada sekitar tahun 850 masehi oleh Rakai
+                        Pikatan, dan terus dikembangkan dan diperluas oleh Balitung Maha Sambu, pada masa Kerajaan
+                        Medang Mataram.
+                    </p>
                 </div>
             </main>
         </section>
