--- a/views/amikom/detail/dokumentasi/index.html
+++ b/views/amikom/detail/dokumentasi/index.html
@@ -28,7 +28,7 @@
     <section id="amikom_detail_documentation">
         <header>
             <div class="logo">
-                <img src="../../../../public/image/logo/logo-amikom.jpg" alt="">
+                <img src="../../../../public/image/logo/logo-amikom.jpg" alt="logo-amikom">
             </div>
             <div class="title">
                 <h1>AMIKOM</h1>
@@ -50,7 +50,7 @@
                     <li><a href="../../../../amikom.html">PENJELASAN</a></li>
                     <li><a href="../materi/index.html">MATERI</a></li>
                     <li><a href="../struktur/index.html">STRUKTUR</a></li>
-                    <li><a href="../dokumentasi/">DOKUMENTASI</a></li>
+                    <li><a href="../dokumentasi/index.html">DOKUMENTASI</a></li>
                 </ul>
             </aside>
             <main>
@@ -58,7 +58,12 @@
                     <h1>DOKUMENTASI</h1>
                 </div>
                 <div class="content">
-                    <h1>Konten Dokumentasi Amikom</h1>
+                    <div class="image-group">
+                        <img src="../../../../public/image/wisata/heha.jpg" alt="dokumentasi">
+                        <img src="../../../../public/image/wisata/heha.jpg" alt="dokumentasi">
+                        <img src="../../../../public/image/wisata/heha.jpg" alt="dokumentasi">
+                        <img src="../../../../public/image/wisata/heha.jpg" alt="dokumentasi">
+                    </div>
                 </div>
             </main>
         </section>
