--- a/views/bltp/detail/dokumentasi/index.html
+++ b/views/bltp/detail/dokumentasi/index.html
@@ -28,7 +28,7 @@
     <section id="blpt_detail_documentation">
         <header>
             <div class="logo">
-                <img src="../../../../public/image/logo/logo-blpt.png" alt="">
+                <img src="../../../../public/image/logo/logo-blpt.png" alt="logo-blpt">
             </div>
             <div class="title">
                 <h1>BLPT</h1>
@@ -51,7 +51,7 @@
                     <li><a href="../materi/index.html">MATERI</a></li>
                     <li><a href="../struktur/index.html">STRUKTUR</a></li>
                     <li><a href="../projek/index.html">PROJEK</a></li>
-                    <li><a href="../dokumentasi/">DOKUMENTASI</a></li>
+                    <li><a href="../dokumentasi/index.html">DOKUMENTASI</a></li>
                 </ul>
             </aside>
             <main>
@@ -59,7 +59,12 @@
                     <h1>DOKUMENTASI</h1>
                 </div>
                 <div class="content">
-                    <h1>Konten Dokumentasi BLPT</h1>
+                    <div class="image-group">
+                        <img src="../../../../public/image/wisata/heha.jpg" alt="dokumentasi">
+                        <img src="../../../../public/image/wisata/heha.jpg" alt="dokumentasi">
+                        <img src="../../../../public/image/wisata/heha.jpg" alt="dokumentasi">
+                        <img src="../../../../public/image/wisata/heha.jpg" alt="dokumentasi">
+                    </div>
                 </div>
             </main>
         </section>
