--- a/views/bltp/detail/projek/index.html
+++ b/views/bltp/detail/projek/index.html
@@ -28,7 +28,7 @@
     <section id="blpt_detail_project">
         <header>
             <div class="logo">
-                <img src="../../../../public/image/logo/logo-blpt.png" alt="">
+                <img src="../../../../public/image/logo/logo-blpt.png" alt="logo-blpt">
             </div>
             <div class="title">
                 <h1>BLPT</h1>
@@ -51,7 +51,7 @@
                     <li><a href="../materi/index.html">MATERI</a></li>
                     <li><a href="../struktur/index.html">STRUKTUR</a></li>
                     <li><a href="../projek/index.html">PROJEK</a></li>
-                    <li><a href="../dokumentasi/">DOKUMENTASI</a></li>
+                    <li><a href="../dokumentasi/index.html">DOKUMENTASI</a></li>
                 </ul>
             </aside>
             <main>
